Can download pdf of qr codes

--- a/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.html
+++ b/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.html
@@ -1,10 +1,19 @@
-<div class="qr-wrapper">
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
-    <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+
+<button (click)="onDownload()">Download</button>
+<div class="qr-wrapper" id="qr-wrapper" style="max-width: 210px; max-height: 297px;">
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    <qrcode [qrdata]="'https://noshnexus.com'" [width]="50" [imageHeight]="10" [imageWidth]="10" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+
 </div>
