Creted pdf wrapper component

--- a/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.css
+++ b/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.css
@@ -1,6 +1,5 @@
 .qr-wrapper {
     display: flex;
     flex-wrap: wrap;
-    gap: 2px;
-    background-color: white;
+    justify-content: center;
 }
