--- a/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.html
+++ b/clients/owner-client/src/app/_layouts/tables/tables-qr-code/tables-qr-code.component.html
@@ -2,7 +2,7 @@
 <button (click)="onDownload()">Download</button>
 
 
-<app-pdf-wrapper [name]="'restaurant-tables'">
+<!-- <app-pdf-wrapper [name]="'restaurant-tables'">
     <div class="qr-wrapper">
         <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
         <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
@@ -10,5 +10,16 @@
         <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
         <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
         <qrcode [qrdata]="'https://noshnexus.com'" [width]="256" [errorCorrectionLevel]="'M'" imageSrc="assets/img/logo-160x160.png"></qrcode>
+    </div>
+</app-pdf-wrapper> -->
+
+
+
+<app-pdf-wrapper>
+    <div class="paper-wrapper">
+        <app-table-qr-code></app-table-qr-code>
+        <app-table-qr-code></app-table-qr-code>
+        <app-table-qr-code></app-table-qr-code>
+        <app-table-qr-code></app-table-qr-code>
     </div>
 </app-pdf-wrapper>
