Added some basic layout

--- a/clients/customer-client/src/styles.css
+++ b/clients/customer-client/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+:root {
+  --primary: #f57c00;
+  --accent: #3f51b5;
+  --success: #66bb6a;
+  --warning: #ef5350;
+  --info: #42a5f5;
+  --primary-light: #ffb74d;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
