Added top nav with signal

--- a/clients/customer-client/src/app/components/top-nav/top-nav.component.html
+++ b/clients/customer-client/src/app/components/top-nav/top-nav.component.html
@@ -1,13 +1,12 @@
 <mat-toolbar class="main-wrapper">
-    <button (click)="onSidenav()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+    @if (topNavService.topNav().hasDrawerBtn) {
+      <button (click)="onSidenav()" mat-icon-button>
+        <mat-icon>menu</mat-icon>
+      </button>
+    } @else {
+      <button (click)="goBack()" mat-icon-button>
+        <mat-icon>arrow_back</mat-icon>
+      </button>
+    }
+    <span>{{ topNavService.topNav().title }}</span>
   </mat-toolbar>
