--- a/clients/customer-client/src/app/layouts/main/main.component.html
+++ b/clients/customer-client/src/app/layouts/main/main.component.html
@@ -1,5 +1,5 @@
-<mat-drawer-container class="drawer-wrapper" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+<mat-drawer-container class="drawer-wrapper" autosize [hasBackdrop]="true">
+  <mat-drawer #drawer class="example-sidenav" mode="over">
     <p>Auto-resizing sidenav</p>
   </mat-drawer>
 
