Added environment and restaurant in home component

--- a/clients/customer-client/src/app/layouts/home/home.component.html
+++ b/clients/customer-client/src/app/layouts/home/home.component.html
@@ -1,1 +1,16 @@
-<app-restaurant-card></app-restaurant-card>
+<div class="restaurant-wrapper">
+  @for (restaurant of restaurants(); track $index) {
+  <app-restaurant-card [restaurant]="restaurant"></app-restaurant-card>
+  }
+  <!-- ove kasnije izbrisati -->
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <app-restaurant-card></app-restaurant-card>
+  <!-- ****************************** -->
+</div>
