--- a/clients/customer-client/src/app/components/restaurant-card/restaurant-card.component.css
+++ b/clients/customer-client/src/app/components/restaurant-card/restaurant-card.component.css
@@ -1,7 +1,9 @@
 .main-wrapper {
-    width: 100%;
     height: 12rem;
     position: relative;
+    width: 25rem;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 img {
@@ -50,4 +52,10 @@ img {
     align-items: center;
     justify-content: flex-end;
     gap: 0.5rem;
+}
+
+@media (max-width: 960px) {
+    .main-wrapper {
+        width: 100%;
+    }
 }
