--- a/clients/customer-client/src/app/layouts/main/main.component.html
+++ b/clients/customer-client/src/app/layouts/main/main.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="drawer-wrapper" autosize [hasBackdrop]="true">
-  <mat-drawer #drawer class="example-sidenav" mode="over">
-    <p>Auto-resizing sidenav</p>
+  <mat-drawer #drawer class="sidenav" mode="over">
+    <app-side-nav></app-side-nav>
   </mat-drawer>
 
   <app-top-nav (sideNavEmitter)="drawer.toggle()"></app-top-nav>
