--- a/clients/customer-client/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/clients/customer-client/src/app/components/restaurant-card/restaurant-card.component.html
@@ -1,4 +1,4 @@
-<div class="main-wrapper">
+<div class="main-wrapper" (click)="onRestaurant()">
   @if (isImageLoading()) {
   <div class="spinner-wrapper">
     <mat-spinner></mat-spinner>
