Added router link to side nav

--- a/clients/customer-client/src/app/components/side-nav/side-nav.component.html
+++ b/clients/customer-client/src/app/components/side-nav/side-nav.component.html
@@ -1,9 +1,9 @@
 <div class="main-wrapper">
     <div class="header-wrapper">
-        Nosh Nexus
+        <h1>Nosh Nexus</h1>
     </div>
     <div class="side-nav-row-wrapper">
-        <div class="side-nav-row">
+        <div class="side-nav-row" routerLink="/home">
             <mat-icon inline="true">storefront</mat-icon>
             <div class="row-name">Restaurants</div>
         </div>
