--- a/clients/customer-client/src/app/layouts/restaurant/restaurant-details/restaurant-details.component.html
+++ b/clients/customer-client/src/app/layouts/restaurant/restaurant-details/restaurant-details.component.html
@@ -26,7 +26,7 @@
         <mat-icon>live_tv</mat-icon>
         Live Orders
     </button>
-    <button mat-raised-button type="button">
+    <button mat-raised-button type="button" routerLink="/selection/{{restaurant()?.id}}">
         <mat-icon>restaurant_menu</mat-icon>
         {{ restaurant()?.menusNumber }}
     </button>
