--- a/clients/customer-client/src/app/components/menu-item-card/menu-item-card.component.css
+++ b/clients/customer-client/src/app/components/menu-item-card/menu-item-card.component.css
@@ -1,7 +1,7 @@
 .main-wrapper {
     width: 100%;
     padding: 0.5rem;
-    background-color: #1c2727;
+    background-color: #2d3e3e;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
