--- a/clients/customer-client/src/app/layouts/selection/selection.component.html
+++ b/clients/customer-client/src/app/layouts/selection/selection.component.html
@@ -5,4 +5,6 @@
     <mat-tab label="Menus">
         <app-menus></app-menus>
     </mat-tab>
-  </mat-tab-group>
+</mat-tab-group>
+
+<app-order-bottom-navigation></app-order-bottom-navigation>
