--- a/clients/customer-client/src/app/layouts/menu-items/menu-items.component.html
+++ b/clients/customer-client/src/app/layouts/menu-items/menu-items.component.html
@@ -1,5 +1,9 @@
 <div class="menu-item-wrapper">
-    @for (menuItem of menuItems(); track $index) {
-        <app-menu-item-card [menuItem]="menuItem"></app-menu-item-card>
-    }
+  @for (menuItem of menuItems(); track $index) {
+  <app-menu-item-card [menuItem]="menuItem"></app-menu-item-card>
+  } @if (hasMoreMenuItems) {
+  <div class="spinner-wrapper">
+    <mat-spinner [diameter]="30"></mat-spinner>
+  </div>
+  }
 </div>
