Created login dialog

--- a/clients/customer-client/src/app/components/side-nav/side-nav.component.html
+++ b/clients/customer-client/src/app/components/side-nav/side-nav.component.html
@@ -11,7 +11,7 @@
             <mat-icon inline="true">history</mat-icon>
             <div class="row-name">Order History</div>
         </div>
-        <div class="side-nav-row">
+        <div class="side-nav-row" (click)="onOpenLoginDialog()">
             <mat-icon inline="true">logout</mat-icon>
             <div class="row-name">Log Out</div>
         </div>
