--- a/clients/customer-client/src/app/components/order-bottom-navigation/order-bottom-navigation.component.html
+++ b/clients/customer-client/src/app/components/order-bottom-navigation/order-bottom-navigation.component.html
@@ -1,9 +1,9 @@
 <div class="main-wrapper">
     <div class="btn" matRipple matRippleColor="var(--primary)">
-        <mat-icon>list_alt</mat-icon>
+        <mat-icon matBadge="{{ menuItemNumber() > 0 ? menuItemNumber() : '' }}" matBadgeSize="small" matBadgePosition="below">list_alt</mat-icon>
         <div class="button-label">Your Order</div>
     </div>
-    <div class="btn" matRipple matRippleColor="var(--primary)">
+    <div class="btn" matRipple matRippleColor="var(--primary)" (click)="onResetOrder()">
         <mat-icon>delete</mat-icon>
         <div class="button-label">Reset Order</div>
     </div>
