Can select tables based on menu items that are selected

--- a/clients/customer-client/src/app/components/order-bottom-navigation/order-bottom-navigation.component.html
+++ b/clients/customer-client/src/app/components/order-bottom-navigation/order-bottom-navigation.component.html
@@ -1,5 +1,5 @@
 <div class="main-wrapper">
-    <div class="btn" matRipple matRippleColor="var(--primary)">
+    <div class="btn" matRipple matRippleColor="var(--primary)" (click)="onOpenOrderPreview()">
         <mat-icon matBadge="{{ menuItemNumber() > 0 ? menuItemNumber() : '' }}" matBadgeSize="small" matBadgePosition="below">list_alt</mat-icon>
         <div class="button-label">Your Order</div>
     </div>
