--- a/clients/customer-client/src/app/components/side-nav/side-nav.component.html
+++ b/clients/customer-client/src/app/components/side-nav/side-nav.component.html
@@ -3,15 +3,15 @@
         <h1>Nosh Nexus</h1>
     </div>
     <div class="side-nav-row-wrapper">
-        <div class="side-nav-row" routerLink="/home">
+        <div class="side-nav-row" routerLink="/home" matRipple>
             <mat-icon inline="true">storefront</mat-icon>
             <div class="row-name">Restaurants</div>
         </div>
-        <div class="side-nav-row">
+        <div class="side-nav-row" matRipple>
             <mat-icon inline="true">history</mat-icon>
             <div class="row-name">Order History</div>
         </div>
-        <div class="side-nav-row" (click)="onOpenLoginDialog()">
+        <div class="side-nav-row" matRipple (click)="onLogout()">
             <mat-icon inline="true">logout</mat-icon>
             <div class="row-name">Log Out</div>
         </div>
