Added employee details

--- a/clients/customer-client/src/app/components/employee-card/employee-card.component.html
+++ b/clients/customer-client/src/app/components/employee-card/employee-card.component.html
@@ -1,8 +1,9 @@
+@if (employee) {
 <div class="main-wrapper">
   <div class="image-wrapper">
     <img
       class="bg-image"
-      src="https://noshnexus.com/images/default/default.png"
+      src="{{ employee.restaurant.profileImage }}"
       alt="restaurant-image"
       (load)="isBackgroundImageLoading.set(false)"
     />
@@ -13,25 +14,38 @@
     }
     <div class="profile-image-wrapper">
       <img
-        src="https://noshnexus.com/images/default/default-profile.png"
+        src="{{ employee.profileImage }}"
         alt="profile-image"
         class="profile-image"
       />
     </div>
   </div>
   <div class="header">
-    <div class="username">Username</div>
-    <div class="name">Adir Zunic</div>
+    <div class="username">{{ employee.username }}</div>
+    <div class="name">{{ employee.lastName }} {{ employee.firstName }}</div>
   </div>
 
   <div class="description">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat laudantium
-    voluptatum adipisci, cum ex accusamus in saepe cupiditate vel nulla ullam
-    illum temporibus amet odit fugiat ea animi iste ab.
+    {{ employee.description }}
   </div>
 
   <div class="button-wrapper">
-    <button type="button" color="accent" mat-raised-button>View More</button>
-    <button type="button" color="primary" mat-raised-button>Rupa</button>
+    <button
+      type="button"
+      color="accent"
+      mat-raised-button
+      (click)="onViewMore()"
+    >
+      View More
+    </button>
+    <button
+      type="button"
+      color="primary"
+      mat-raised-button
+      (click)="onRestaurant()"
+    >
+      {{ employee.restaurant.name }}
+    </button>
   </div>
 </div>
+}
