Added order card component

--- a/clients/customer-client/src/app/components/side-nav/side-nav.component.html
+++ b/clients/customer-client/src/app/components/side-nav/side-nav.component.html
@@ -7,7 +7,7 @@
             <mat-icon inline="true">storefront</mat-icon>
             <div class="row-name">Restaurants</div>
         </div>
-        <div class="side-nav-row" matRipple>
+        <div class="side-nav-row" matRipple (click)="onViewOrderHistory()">
             <mat-icon inline="true">history</mat-icon>
             <div class="row-name">Order History</div>
         </div>
