Added time ago pipe

--- a/clients/customer-client/src/app/components/order-card/order-card.component.html
+++ b/clients/customer-client/src/app/components/order-card/order-card.component.html
@@ -76,7 +76,7 @@
               Total Items: <span>{{ order.totalItems }}</span>
             </div>
             <div class="details-item">
-              Ordered: <span>{{ order.createdAt }}</span>
+              Ordered: <span>{{ order.createdAt | timeAgo }}</span>
             </div>
           </div>
         </div>
