--- a/clients/customer-client/src/app/layouts/main/main.component.css
+++ b/clients/customer-client/src/app/layouts/main/main.component.css
@@ -18,6 +18,19 @@
     margin-top: 60px;
     height: calc(100vh - 60px); 
     overflow: scroll;
+    position: relative;
+}
+
+.spinner-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
 }
 
 @media (max-width: 960px) {
