--- a/clients/customer-client/src/app/layouts/account/edit-account/edit-account.component.html
+++ b/clients/customer-client/src/app/layouts/account/edit-account/edit-account.component.html
@@ -1,3 +1,48 @@
-<form class="form-wrapper">
-    
+@if (accountForm && account) {
+<form class="form-wrapper" [formGroup]="accountForm" (ngSubmit)="onSubmit()">
+  <mat-form-field appearance="outline">
+    <mat-label>Username</mat-label>
+    <input matInput formControlName="username" />
+  </mat-form-field>
+
+  <div class="two-col">
+    <mat-form-field appearance="outline">
+      <mat-label>First Name</mat-label>
+      <input matInput formControlName="firstName" />
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Last Name</mat-label>
+      <input matInput formControlName="lastName" />
+    </mat-form-field>
+  </div>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Select Country</mat-label>
+    <mat-select formControlName="countryId">
+      @for (country of account.countries; track country) {
+      <mat-option [value]="country.id">{{ country.name }}</mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>City</mat-label>
+    <input matInput formControlName="city" />
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Description</mat-label>
+    <textarea matInput formControlName="description"></textarea>
+  </mat-form-field>
+
+  <button
+    mat-raised-button
+    color="accent"
+    type="submit"
+    [disabled]="accountForm.invalid || !accountForm.dirty"
+  >
+    Update
+  </button>
 </form>
+}
