--- a/clients/customer-client/src/app/layouts/account/edit-account/edit-account.component.html
+++ b/clients/customer-client/src/app/layouts/account/edit-account/edit-account.component.html
@@ -28,6 +28,7 @@
       type="button"
       color="primary"
       mat-raised-button
+      (click)="onSubmitProfileImage()"
       [disabled]="!profileImageForm.has('image')"
     >
       Save
